# api/game_profile/request.go
@@ -1,5 +1,0 @@
-package apiGameProfile
-
-type UpdateGameProfileGroupRequest struct {
-	GroupName string `json:"group_name" binding:"required"`
-}
